# quietpanel-ai-exercise

./: .gitignore  README.md  VERSION  build.ps1
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/quietpanel/client/: ApodServer.java  HistoryGraphView.java  MainActivity.java  PhotoFolderActivity.java  SwipePager.java  TransportAuth.java  TransportServer.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
bridge/: Cargo.toml
bridge/src/: actions.rs  adb.rs  apod.rs  display.rs  main.rs  metrics.rs  protocol.rs  settings.rs  tray.rs  usb.rs
docs/: PROJECT_CLOSEOUT_2026-07-22.md  USB_TETHERING_EXPERIMENT.md
packaging/: Install-Android.cmd  Start-QuietPanel.cmd
