[package]
name = "quietpanel-bridge"
version = "7.0.0"
edition = "2021"

[[bin]]
name = "QuietPanelBridge"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
sysinfo = "0.30"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Shutdown",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
